# helmcode

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
configs/: default_config.yaml  model_profiles.yaml
helmcode/: __init__.py
helmcode/agent/: allocation.py  coder.py  executor.py  loop.py  planner.py  prompts.py  reviewer.py  runner.py  runtime.py  session.py  state.py
helmcode/cli/: main.py  model_overrides.py
helmcode/context/: __init__.py  context_builder.py  file_index.py  repo_map.py  token_budget.py  workspace.py
helmcode/core/: config.py  constants.py  dependency_container.py  error_handler.py  exceptions.py  logging.py
helmcode/mcp/: runtime.py
npm/: postinstall.js
tests/: test_agent_allocation.py  test_agent_loop.py  test_agents_cli.py  test_allocations_cli.py  test_apply_command.py  test_chat_cli.py  test_checkpoint_store.py  test_checkpoints_cli.py  test_coding_plan_budget.py  test_command_policy.py  test_commit_cli.py  test_compact_cli.py  test_context_builder.py  test_context_cli.py  test_cost_cli.py  test_dependency_container.py  test_doctor_cli.py  test_executor.py  test_file_index.py  test_hooks_cli.py  test_index_cli.py  test_init_cli.py  test_keys_cli.py  test_mcp_cli.py  test_model_selector.py  test_patch_apply.py  test_performance.py  test_permissions_cli.py  test_pinned_memory.py  test_preplan_cache.py  test_project_memory.py  test_provider_usage.py  test_quota.py  test_quota_cli.py  test_recommend_cli.py  test_retry_cli.py  test_routes_cli.py  test_run_orchestrator.py  test_savings_cli.py  test_session_store.py  (+8 more)
(+74 files in other folders)
