[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helmcode"
version = "0.1.0"
description = "CLI-first local codebase agent for planning, patching, and verifying repository changes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
helmcode = "helmcode.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
